Refactor(prefab-crud): set isAlreadyAnswered as compute variable and not attribute of prefab. Redo logic + Update unit test